plugins {
    id 'java'
    id 'checkstyle'
    id 'pmd'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dependency.management)
    alias(libs.plugins.spotbugs) apply false
    alias(libs.plugins.spotless)
}

def version_number = new File(rootDir.getAbsolutePath(), 'VERSION').readLines()[0].trim()

allprojects {

    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java-library'
    apply plugin: 'checkstyle'
    apply plugin: 'pmd'
    apply plugin: 'com.github.spotbugs'

    group = 'com.isxcode.spark'
    version = version_number

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
        maven { url "https://plugins.gradle.org/m2/" }
    }

    configurations.configureEach {
        exclude group: "org.apache.logging.log4j", module: "log4j-slf4j-impl"
        exclude group: "org.slf4j", module: "slf4j-reload4j"
        exclude group: "com.sun.xml.bind", module: "jaxb-core"
        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
            if (details.requested.group == 'org.apache.kafka' && details.requested.name == 'kafka-clients') {
                details.useVersion libs.versions.kafka.get()
            }
        }
    }

    dependencies {

        implementation 'org.springframework.boot:spring-boot-starter-web'

        implementation 'org.springframework.boot:spring-boot-starter-aop'

        implementation 'org.springframework.boot:spring-boot-starter-validation'

        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'

        implementation libs.springdoc.openapi.starter.webmvc.ui

        compileOnly libs.lombok
        annotationProcessor libs.lombok

        implementation libs.fastjson

        implementation libs.junit.jupiter
        testImplementation libs.junit.jupiter.api

        implementation libs.mapstruct
        implementation libs.mapstruct.processor
        annotationProcessor libs.mapstruct.processor
        testAnnotationProcessor libs.mapstruct.processor
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    tasks.named('bootJar') {
        enabled = false
    }

    tasks.named('jar') {
        enabled = true
    }

    checkstyle {
        toolVersion = libs.versions.checkstyle.get()
    }

    tasks.withType(Checkstyle).configureEach {
        maxWarnings = 0
        maxErrors = 0
        ignoreFailures = false
        config resources.text.fromFile(rootDir.getAbsolutePath() + '/.checkstyle/checkstyle.xml')
        reports {
            xml.required = false
            html.required = true
            html.stylesheet resources.text.fromFile(rootDir.getAbsolutePath() + '/.checkstyle/checkstyle-simple.xsl')
        }
        doLast {
            def reportFile = reports.html.outputLocation.get().asFile
            if (reportFile.exists()) {
                println "Checkstyle HTML report: ${reportFile.toURI()}"
            }
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.release = 17
    }

    pmd {
        toolVersion = libs.versions.pmd.get()
        ignoreFailures = false
        consoleOutput = true
        ruleSets = []
        ruleSetFiles = files(rootDir.getAbsolutePath() + '/.pmd/ruleset.xml')
    }

    configurations.named('pmd') {
        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
            if (details.requested.group == 'org.apache.commons' && details.requested.name == 'commons-lang3') {
                details.useVersion '3.20.0'
            }
            if (details.requested.group == 'com.google.code.gson' && details.requested.name == 'gson') {
                details.useVersion '2.14.0'
            }
        }
    }

    configurations.named('spotbugs') {
        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
            if (details.requested.group == 'org.apache.commons' && details.requested.name == 'commons-lang3') {
                details.useVersion '3.19.0'
            }
            if (details.requested.group == 'com.google.code.gson' && details.requested.name == 'gson') {
                details.useVersion '2.13.2'
            }
        }
    }

    tasks.withType(Pmd).configureEach {
        ignoreFailures = false
        reports {
            xml.required = false
            html.required = true
        }
        doLast {
            def reportFile = reports.html.outputLocation.get().asFile
            if (reportFile.exists()) {
                println "PMD HTML report: ${reportFile.toURI()}"
            }
        }
    }

    spotbugs {
        toolVersion = libs.versions.spotbugs.tool.get()
        ignoreFailures = false
        effort = com.github.spotbugs.snom.Effort.valueOf('MAX')
        excludeFilter = file(rootDir.getAbsolutePath() + '/.spotbugs/exclude.xml')
        reportLevel = com.github.spotbugs.snom.Confidence.valueOf('HIGH')
        showStackTraces = true
        showProgress = true
    }

    tasks.withType(com.github.spotbugs.snom.SpotBugsTask).configureEach {
        ignoreFailures = false
        reports {
            html.required = true
            xml.required = false
        }
        doLast {
            def reportFile = reports.html.outputLocation.get().asFile
            if (reportFile.exists()) {
                println "SpotBugs HTML report: ${reportFile.toURI()}"
            }
        }
    }
}

spotless {
    java {
        target fileTree(rootDir) {
            include 'spark-yun-agent/**/*.java'
            include 'spark-yun-backend/**/*.java'
            include 'spark-yun-plugins/**/*.java'
            include 'spark-yun-vip/**/*.java'
            exclude '**/build/**/*.java'
        }
        eclipse().configFile(rootDir.getAbsolutePath() + '/.spotless/eclipse-java-google-style.xml')
        removeUnusedImports()
    }
}

tasks.register("format") {
    dependsOn(":spark-yun-dist:copy_version", ":spotlessApply")
    dependsOn(subprojects.findAll { it.path != ':spark-yun-frontend' }.collect { "${it.path}:check" })
}

tasks.register('package', GradleBuild) {

    tasks = ["install", "clean", ":spark-yun-dist:make"]
}

tasks.register('start', Exec) {

    commandLine 'sh', '-c', '''
      rm -rf spark-yun-dist/build/distributions/zhiqingyun
      tar -vzxf spark-yun-dist/build/distributions/zhiqingyun.tar.gz -C spark-yun-dist/build/distributions/
      cd spark-yun-dist/build/distributions/zhiqingyun/bin
      bash start.sh
    '''
}

tasks.register('website', Exec) {

    commandLine 'sh', '-c', '''
      cd docs
      rm -rf node_modules
      pnpm install
      pnpm run dev
     '''
}

tasks.register('frontend', Exec) {

    commandLine 'sh', '-c', '''
      cd spark-yun-frontend
      rm -rf node_modules
      pnpm install
      pnpm run dev --host
    '''
}

tasks.register('backend', GradleBuild) {

    tasks = [":spark-yun-backend:spark-yun-main:bootRun"]
}

tasks.register('install', Exec) {
    if (!System.properties['os.name'].toString().contains('Mac OS X')) {
        doFirst {
            exec {
                commandLine 'sh', '-c', "sed -i 's/\\r\$//' install.sh"
            }
        }
    }
    commandLine 'sh', '-c', 'bash install.sh'
}

tasks.register('docker', Exec) {

    commandLine 'sh', '-c', '''
      docker buildx uninstall
      docker build -t isxcode/zhiqingyun:''' + version_number + ''' -f ./Dockerfile .
     '''
}

tasks.register('upload-ali-oss', Exec) {

    commandLine 'sh', '-c', '''
      scp spark-yun-dist/build/distributions/zhiqingyun.tar.gz root@zhiqingyun.isxcode.com:/data/file/
     '''
}

tasks.register('upload-docker-hub', Exec) {

    commandLine 'sh', '-c', '''
      docker buildx install
      docker buildx build --platform linux/amd64,linux/arm64/v8 -t isxcode/zhiqingyun:latest -f ./Dockerfile . --push
     '''
}

tasks.register('upload-ali-hub', Exec) {

    commandLine 'sh', '-c', '''
      docker buildx install
      docker rmi registry.cn-shanghai.aliyuncs.com/isxcode/zhiqingyun:latest-amd64
      docker buildx build --platform linux/amd64 -t registry.cn-shanghai.aliyuncs.com/isxcode/zhiqingyun:latest-amd64 -f ./Dockerfile . --load
      docker push registry.cn-shanghai.aliyuncs.com/isxcode/zhiqingyun:latest-amd64
      docker rmi registry.cn-shanghai.aliyuncs.com/isxcode/zhiqingyun:latest-arm64
      docker buildx build --platform linux/arm64/v8 -t registry.cn-shanghai.aliyuncs.com/isxcode/zhiqingyun:latest-arm64 -f ./Dockerfile . --load
      docker push registry.cn-shanghai.aliyuncs.com/isxcode/zhiqingyun:latest-arm64      
     '''
}
